# degas

./: pyproject.toml  setup.cfg  setup.py
degas/: postprocess.py
degas/examples/: calgal.py  gridgals.py
