
[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = degas
description = Dense Gas with ARGUS
long_description = This is a package for reducing and imaging ARGUS data
author = Erik Rosolowsky
author_email = rosolowsky@ualberta.ca
license = GPLv2
url = http://astropy.org/
edit_on_github = False
github_project = low-sky/degas
# install_requires = ['astropy', 'spectral-cube','numpy', 'fitsio']
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.dev
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False